Fixed bug were iframes with a specified size would not align properly.
Size variables are now optional.

--- a/lightbox/styles.css
+++ b/lightbox/styles.css
@@ -15,13 +15,12 @@
 .lb_content {
 	display: none;
 	position: absolute;
-	top: 10%;
-	left: 10%;
 	width: 80%;
 	height: 80%;
 	background-color: white;
 	z-index:1002;
 	overflow: visible;
+	top: 10%;
 }
 
 .lb_content_frame
